--- a/src/main/webapp/resources/css/doc.css
+++ b/src/main/webapp/resources/css/doc.css
@@ -1,3 +1,8 @@
+/* 선택자(selector) */
+*{
+    box-sizing:border-box;
+}
+
 @font-face{
     font-family:'InterparkGothic'; /*font 이름*/
     font-style: 'normal';
@@ -13,146 +18,181 @@
     font-style: 'normal';
     src: url("../font/InterparkGothicBold.ttf"); /* IE9 Compat Modes */
 }  
-.body{
-    margin:0;
-    background-color:#efefef;
-}
-hr{
-    color:#cccccc;
-}
-/* 기본 해상도(QHD) */
-.pc{
-    font-family:'InterparkGothicMedium';
-    padding:0px;
-    margin:0px;
-    font-size: 20px;
-    background-color:#efefef;
-    /* display: none; 화면에서 안 보이고 공간도 차지하지 않음 */
-}   
-body{
-    margin : 0 auto;
-}
-.main-nav{ 
-    display:flex;
-    flex-direction:row;
-    width:100%;
-    height:40px;
-    margin:0 auto;
-    padding-left:0px;
-    background-color:skyblue;
-    list-style-type:none;
-    border-top:solid #cccccc 1px;
-    border-bottom:solid #cccccc 1px;
-}
-.main-nav-items{
-    padding-right:25px;
-    padding-left:25px;
-    cursor:pointer;
-}
-.main-nav-items:nth-child(n+2):nth-child(-n+4){
-    padding-top:10px;
-    font-size:20px;
-}
-.main-nav-items a{
-    text-align:center;
-    text-decoration:none;
-    color:white;
-}
-.search_area{
-    margin:0 auto;
-    position:relative;
-    top:0px;
-    left:707px;
-    height:40px;
-    width:400px;
-    background-color: black;
-}
-.search_text{
-    border:0;
-    position:relative;
-    width:470px;
-    height:40px;
-    background-color:white;
-    border-right:solid #cccccc 1px;
-    border-left:solid #cccccc 1px;
-}
-.search_icon{
-    border:0;
-    margin:0 auto;
-    margin-top:2px;
-    width:40px;
-    height:40px;
-    position:relative;
-    top:-42px;
-    left:467px;
-    padding:0;
-    background-color:white;
-    border-right:solid #cccccc 1px;
-    border-left:solid #cccccc 1px;
-}
-.search_icon_size{
-    border:0;
-    margin:0 auto;
-    width:38px;
-    height:38px;
-}
-.top-nav{
-    justify-content: flex-end;
-    display:flex;
-    flex-direction:row;
-    width:100%;
+
+html, body{
     margin : 0;
-    margin:0 auto;
-    padding:0;
-    list-style-type:none;
-    float:right;
+    padding : 0;
+    font-family: Dotum,'돋움',Helvetica,"Apple SD Gothic Neo",sans-serif;
 }
-.top-nav-items{
-    font-size:15px;
-    padding:5px;
-    cursor:pointer;
-    color:rgb(0, 0, 0);
+#fixed{
+    position:fixed;
+    top : 50px;
+    right:50px;
+    display:inline-block;
+    width:100px;
+    height:100px;
+    border: 1px solid black;
+    border-radius : 50px;
 }
-.top-nav-items a{
-    text-align:center;
-    text-decoration:none;
-    color:rgb(0, 0, 0);
-}
-.aside1{
-    display: block;
-    position: relative;
-    margin: 0 auto;
-    top:20px;
-    left: 983px;
-    width: 505px;
-    height: 1005px;
-    background-color: white;
-    border: solid #cccccc 1px;
+.blind{
+    position:absolute;
+    overflow:hidden;
+    clip : rect(0, 0, 0, 0);
+    margin : -1px;
+    width : 1px;
+    height : 1px;
 }
 
-.main_content {
-    display: inline-block;
+.center-align{
+    margin:0 auto;
+    width:1080px;
+}
+
+header{
+    height: 170px;
+}
+
+#header-top{
+    float:right;
+    margin-top:8px;
+}
+
+#header-top span{
+    color: #888;
+    letter-spacing: -1px;
+    font-size:  11px;
+    line-height: 22px;
+}
+
+#header-search{
+    clear:both;
+}
+
+#header-search a{
+    text-decoration: none;
+}
+
+#header-search h1{
+    width:198px;
+    height:62px;
+    display:inline-block;
+    background : url(../img/logo_skyblue.png) 0px 2px no-repeat;
+    vertical-align: middle;
     position:relative;
-    top:-1007px;
-    left:480px;
-    padding:30px;
-    width:1400px;
-    height:1800px;
+    top: 0px;
+}
+
+#header-search h1 span{
+    display:none;
+}
+
+#header-search h2{
+    display:none;
+}
+
+#header-search fieldset{
+    margin-left:18px;
+    padding: 12px 0 12px 10px;
+    width:521px;
+    height:49px;
+    display:inline-block;
+    border: 2px solid skyblue;
+    vertical-align: middle;
+    position:relative;
+    left:1px;
+}
+
+#header-search fieldset input{
+    border: none;
+    padding : 0;
+    outline:none;
+    vertical-align: top;
+    width:405px;
+    height:23px;
+}
+
+#header-search fieldset button{
+    width:49px;
+    height:49px;
+    border : none;
+    padding : 0;
+    background : skyblue;
+    position:relative;
+    top: -14px;
+    left: 48px;
+
+}
+
+#search-image{
+    background-image: url(./sp_searchbtn.png);
+    background-position: 0px 0px;
+    background-repeat:no-repeat;
+    width:21px;
+    height:21px;
+    display:inline-block;
+    margin:14px;
+}
+
+nav{
+    height:46px;
+    border-top: 1px solid #f1f3f6;
+    border-bottom: 1px solid #d1d8e4;
+}
+nav ul {
+    display: inline-block;
+    margin : 0;
+    padding : 10px 0 0 4px;
+    list-style : none;
+}
+
+nav li {
+    display:inline-block;
+}
+
+nav li > a{
+    color:#888;
+    font-family:InterparkGothicBold;
+    font-size:20px;
+    padding-left:10px;
+    text-decoration-line:none;
+}
+
+nav li > a:hover{
+    color:skyblue;
+}
+
+#search-ranking {
+    position: absolute;
+    top: 183px;
+    right: 30px;
+}
+
+#rank-number{
+    margin-top: -9px;
+    color: skyblue;
+    font-size: 16px;
+}
+
+#doc {
+    position:relative;
+    top:-1px;
+    width:1080px;
     margin:0 auto;
     background-color:white;
-    border-left: solid #cccccc 1px;
-    border-right: solid #cccccc 1px;
+    border: solid #d1d8e4 1px;
+    padding : 0 5px 0 5px;
+    font-family:'InterparkGothicMedium';
 }
 
-.content_inner{
-    height:auto;
+.doc_inner{
     margin:0 auto;
 }
 
 .selectbox{
     display: inline-block;
-    position:relative;
-    left:880px;
+    position:absolute;
+    top:10px;
+    left:649px;
     height:40px;
     width:420px;
     background-color: white;
@@ -160,11 +200,13 @@ body{
     border-bottom: solid #cccccc 1px;
     border-right: solid #cccccc 1px;
 }
+
 div .selectbox > ul{
     margin:0;
     padding:0;
     float:left;
 }
+
 div .selectbox > ul > li{
     list-style:none;
     float:left;
@@ -175,9 +217,11 @@ div .selectbox > ul > li{
     border-left: solid #cccccc 1px;
 
 }
+
 div .selectbox > ul > li > a{
     text-decoration: none;
 }
+
 .title{
     display:inline-block;
     position:relative;
@@ -185,20 +229,32 @@ div .selectbox > ul > li > a{
     font-family:'InterparkGothicBold';
     font-size:50px;
 }
-.content{
+
+footer{
+    margin-top:40px;
+}
+
+.footer_inner{
+    position: relative;
+    text-align: center;
+}
+.footer_inner h1 span{
+    display:none;
+}
+.footer_logo{
     position:relative;
-    top:20px;
-    width:auto;
-    height:auto;
+    top:4px;
+    width:62px;
+    height:21px;
+    display:inline-block;
+    background : url("../img/logo_footer.png") 13px 1px no-repeat;
 }
-.footer{
-    display:block;
-    margin:0 auto;
-    width:2543px;
-    height:300px;
-    text-align:center;
-    background-color:white;
+.footer_inner h1 span{
+    display:none;
 }
-hr.footer{
-    margin:0 auto;
+.text, .corp{
+    font-size:14px;
+}
+.corp{
+    font-weight:bold;
 }
