--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -1,3 +1,8 @@
+/* 선택자(selector) */
+*{
+    box-sizing:border-box;
+}
+
 @font-face{
     font-family:'InterparkGothic'; /*font 이름*/
     font-style: 'normal';
@@ -12,151 +17,268 @@
     font-family:'InterparkGothicBold'; /*font 이름*/
     font-style: 'normal';
     src: url("../font/InterparkGothicBold.ttf"); /* IE9 Compat Modes */
-} 
-.body{
-    margin:0;
-    background-color:#efefef;
-}
-hr{
-    color:#cccccc;
-}
-/* 기본 해상도(QHD) */
-.pc{
-    font-family:'InterparkGothicMedium';
-    padding:0px;
-    margin:0px;
-    font-size: 20px;
-    background-color:#efefef;
-    /* display: none; 화면에서 안 보이고 공간도 차지하지 않음 */
-}   
-body{
-    margin : 0 auto;
-}
-.main-nav{ 
-    display:flex;
-    flex-direction:row;
-    width:100%;
-    height:40px;
-    margin:0 auto;
-    padding-left:0px;
-    background-color:skyblue;
-    list-style-type:none;
-    border-top:solid #cccccc 1px;
-    border-bottom:solid #cccccc 1px;
-}
-.main-nav-items{
-    padding-right:25px;
-    padding-left:25px;
-    cursor:pointer;
-}
-.main-nav-items:nth-child(n+2):nth-child(-n+4){
-    padding-top:10px;
-    font-size:20px;
-}
-.main-nav-items a{
-    text-align:center;
-    text-decoration:none;
-    color:white;
-}
-.search_area{
-    margin:0 auto;
-    position:relative;
-    top:0px;
-    left:707px;
-    height:40px;
-    width:400px;
-    background-color: black;
-}
-.search_text{
-    border:0;
-    position:relative;
-    width:470px;
-    height:40px;
-    background-color:white;
-    border-right:solid #cccccc 1px;
-    border-left:solid #cccccc 1px;
-}
-.search_icon{
-    border:0;
-    margin:0 auto;
-    margin-top:2px;
-    width:40px;
-    height:40px;
-    position:relative;
-    top:-42px;
-    left:467px;
-    padding:0;
-    background-color:white;
-    border-right:solid #cccccc 1px;
-    border-left:solid #cccccc 1px;
-}
-.search_icon_size{
-    border:0;
-    margin:0 auto;
-    width:38px;
-    height:38px;
-}
-.top-nav{
-    justify-content: flex-end;
-    display:flex;
-    position: relative;
-    left: -36px;
-    flex-direction:row;
-    width:100%;
+}  
+
+html, body{
     margin : 0;
-    margin:0 auto;
-    padding:0;
-    list-style-type:none;
-    float:right;
+    padding : 0;
+    font-family: Dotum,'돋움',Helvetica,"Apple SD Gothic Neo",sans-serif;
 }
-.top-nav-items{
-    font-size:15px;
-    padding:5px;
-    cursor:pointer;
-    color:rgb(0, 0, 0);
+#fixed{
+    position:fixed;
+    top : 50px;
+    right:50px;
+    display:inline-block;
+    width:100px;
+    height:100px;
+    border: 1px solid black;
+    border-radius : 50px;
 }
-.top-nav-items a{
-    text-align:center;
-    text-decoration:none;
-    color:rgb(0, 0, 0);
-}
-.aside1{
-    display: block;
-    position: relative;
-    margin: 0 auto;
-    top:20px;
-    left: 983px;
-    width: 505px;
-    height: 1005px;
-    background-color: white;
-    border: solid #cccccc 1px;
+.blind{
+    position:absolute;
+    overflow:hidden;
+    clip : rect(0, 0, 0, 0);
+    margin : -1px;
+    width : 1px;
+    height : 1px;
 }
 
-.main-content {
-    position:relative;
-    top:-988px;
-    left:-200px;
-    height:40px;
-    width:1512px;
+.center-align{
     margin:0 auto;
-    display: grid;
-    grid-row: 1 / 3;
-    grid-template-columns: 500px 500px 500px;
-    grid-template-rows: 500px 500px;
-    grid-column-gap: 5px;
-    grid-row-gap: 5px;
+    width:1080px;
 }
-.main-content-items{
-    display:grid;
-    width: 500px;
-    height:500px;
+
+header{
+    height: 170px;
+}
+
+#header-top{
+    float:right;
+    margin-top:8px;
+}
+
+#header-top span{
+    color: #888;
+    letter-spacing: -1px;
+    font-size:  11px;
+    line-height: 22px;
+}
+
+#header-search{
+    clear:both;
+}
+
+#header-search a{
+    text-decoration: none;
+}
+
+#header-search h1{
+    width:198px;
+    height:62px;
+    display:inline-block;
+    /* background-image : url(./sp_search.png);*/
+    /*background-position : 0px -1px;*/
+    /*background-repeat:no-repeat; */
+    background : url(../img/logo_skyblue.png) 0px 2px no-repeat;
+    vertical-align: middle;
+    position:relative;
+    top: 0px;
+}
+
+#header-search h1 span{
+    display:none;
+}
+
+#header-search h2{
+    display:none;
+}
+
+#header-search fieldset{
+    margin-left:18px;
+    padding: 12px 0 12px 10px;
+    width:521px;
+    height:49px;
+    display:inline-block;
+    border: 2px solid skyblue;
+    vertical-align: middle;
+    position:relative;
+    left:1px;
+}
+
+#header-search fieldset input{
+    border: none;
+    padding : 0;
+    outline:none;
+    vertical-align: top;
+    width:405px;
+    height:23px;
+}
+
+#header-search fieldset button{
+    width:49px;
+    height:49px;
+    border : none;
+    padding : 0;
+    background : skyblue;
+    position:relative;
+    top: -14px;
+    left: 48px;
+
+}
+
+#search-image{
+    background-image: url(./sp_searchbtn.png);
+    background-position: 0px 0px;
+    background-repeat:no-repeat;
+    width:21px;
+    height:21px;
+    display:inline-block;
+    margin:14px;
+}
+
+nav{
+    height:46px;
+    border-top: 1px solid #f1f3f6;
+    border-bottom: 1px solid #d1d8e4;
+}
+nav ul {
+    display: inline-block;
+    margin : 0;
+    padding : 10px 0 0 4px;
+    list-style : none;
+}
+
+nav li {
+    display:inline-block;
+}
+
+nav li > a{
+    color:#888;
+    font-family:InterparkGothicBold;
+    font-size:20px;
+    padding-left:10px;
+    text-decoration-line:none;
+}
+
+nav li > a:hover{
+    color:skyblue;
+}
+
+#search-ranking {
+    position: absolute;
+    top: 183px;
+    right: 30px;
+}
+
+#rank-number{
+    margin-top: -9px;
+    color: skyblue;
+    font-size: 16px;
+}
+
+#welcome{
+    margin:10px auto;
+    width:1080px;
+    border: 1px solid #d1d8e4;
+}
+
+#welcome_inner{
+    margin:10px auto;
+    width:1080px;
+    text-align:center;
+}
+
+#welcome_inner > h2{
+    font-family:InterparkGothic;
+}
+
+#member{
+    position:relative;
+    left:350px;
+    margin:5px auto;
+    padding-top:10px;
+    padding-bottom:10px;
+    width:380px;
+    height:130px;
+    border: 1px solid #d1d8e4;
+}
+
+#member_inner{
+    margin : 0 auto;
+    width:350px;
+    text-align:center;
+}
+
+#loginbtn{
+    margin-top:10px;
+    width:350px;
+    height:50px;
     background-color:skyblue;
-    border:solid #cccccc 1px;
-    border-radius:5px;
+    font-family:InterparkGothicBold;
+    font-size:25px;
+    border:0;
+}
+
+#loginbtn > a{
+    color:white;
+    text-decoration:none;
+}
+
+#logoutBtn{
+    margin-top:10px;
+    width:350px;
+    height:50px;
+    background-color:skyblue;
+    font-family:InterparkGothicBold;
+    font-size:25px;
+    border:0;
+}
+
+#logoutBtn > a{
+    color:white;
+    text-decoration:none;
+}
+
+#joingroup{
+    margin : 0 auto;
+    padding-top:10px;
     text-align:center;
 }
-p.main-content-items{
-    text-align:center;
+
+#recentedit{
+    position:relative;
+    left:350px;
+    margin: 10px auto;
+    width:380px;
+    border: 1px solid #d1d8e4;
+    padding-left:10px;
+    padding-right:10px;
+}
+
+#recentedit_inner{
+    margin: 10px auto;
+}
+
+.list{
+    padding-bottom:10px;
+}
+
+#help{
+    position: relative;
+    left: -197px;
+    top: -417px;
+    margin: 10px auto;
+    width: 686px;
+    height: 407px;
+    border: 1px solid #d1d8e4;
+}
+
+#notice{
+    position:relative;
+    top:-417px;
+    margin: 10px auto;
+    width:1080px;
+    border: 1px solid #d1d8e4;
 }
 footer{
     margin-top:40px;
@@ -165,6 +287,9 @@ footer{
 .footer_inner{
     position: relative;
     text-align: center;
+}
+.footer_inner h1 span{
+    display:none;
 }
 .footer_logo{
     position:relative;
