관리자 페이지 이동, 문서 관련 권한 추가

--- a/src/main/webapp/resources/css/login.css
+++ b/src/main/webapp/resources/css/login.css
@@ -116,6 +116,12 @@ main, .main_inner{
     color:#ffffff;
 }
 
+#console{
+	width:auto;
+	height:20px;
+	position:absolute;
+	top:-20px;
+}
 #errormsg{
     color:red;
     position:relative;
