--- a/src/main/webapp/resources/css/create.css
+++ b/src/main/webapp/resources/css/create.css
@@ -64,6 +64,15 @@ header{
     line-height: 22px;
 }
 
+#header-top span a{
+    text-decoration:none;
+    color:inherit;
+}
+
+#header-top span a:hover{
+    color:skyblue;
+}
+
 #header-search{
     clear:both;
 }
@@ -175,7 +184,7 @@ nav li > a:hover{
 
 #doc {
 	position:relative;
-	top:-1px;
+	top:0px;
     width:1080px;
     margin:0 auto;
     background-color:white;
